# gaei_cpp

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt
gaei_cpp/: CMakeLists.txt  color.hpp  dat_loader.hpp  delaunator.hpp  delaunay.hpp  gaei_cpp.cpp  linq.hpp  meta.hpp  normalize.hpp  reduce_points.hpp  surface_structure_isolate.hpp  triangle_direction.hpp  vector_utl.hpp  vertex.hpp  vertex_to_vrml.hpp  vrml_helper.hpp  vrml_writer.hpp  wall.hpp
test/: CMakeLists.txt  test_color.cpp  test_create_wall.cpp  test_dat_loader.cpp  test_linq.cpp  test_main.cpp  test_normalize.cpp  test_reduce_points.cpp  test_ssi.cpp  test_triangle_direction.cpp  test_vec_utl.cpp  test_vertex.cpp  test_vertex_to_vrml.cpp  test_vrml_writer.cpp
